# md-scanner

./: .gitignore  .gitignore-tauri  DEVELOPMENT_HISTORY.md  DISTRIBUTION_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  FAQ.md  IMPLEMENTATION_SUMMARY.md  PATH_ENVIRONMENT_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  TAURI_SETUP.md  TROUBLESHOOTING.md  VisualStudioBuildToolsInstallationGuide.sh  WAYFINDER_MASTER_PLAN.md  WINDOWS_BUILD_SETUP.md  WINDOWS_INSTALLER_GUIDE.md  azure_config.template.json  build-installer.ps1  docker-compose.yml  index.html  launch-wayfinder.bat  main.py  package-lock.json  package.json  requirements.txt  run_tests.bat  setup-windows.ps1  setup.py  test_bridge.py  test_coaching.py  tmpclaude-fc9d-cwd  tsconfig.json  vite.config.ts  wayfinder-menu.bat
.cargo/: config.toml
md_scanner/: __init__.py  cli.py  clustering.py  embeddings.py  scanner.py  search.py  tauri_bridge.py  timeline.py
md_scanner/learning/: __init__.py  adaptive_coach.py  behavior_tracker.py  difficulty_detector.py  suggestion_engine.py
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  commands_tests.rs  file_intelligence.rs  file_watcher.rs  git_assistant.rs  lib.rs  main.rs  pattern_database.rs  state.rs  windows_deployment_tests.rs
src-tauri/src/handlers/: mod.rs
src/components/: ClusterPanel.tsx  EmbedPanel.tsx  GitAssistant.css  GitAssistant.tsx  LearningModeApp.tsx  Modal.tsx  ScanPanel.tsx  SearchPanel.tsx  StatsPanel.tsx  TimelinePanel.tsx  index.ts
src/components/notifications/: FileSuggestionCard.tsx  NotificationProvider.tsx  SuggestionPanel.tsx  Toast.tsx  ToastContainer.tsx  WatcherStatusBadge.tsx
src/hooks/: useDevice.ts  useFileWatcher.ts  useTauri.ts
src/services/: tauri.ts
src/styles/: app.css  global.css  learning-mode.css  notifications.css  panels.css
