[package]
name = "wayfinder-tauri"
version = "0.1.0"
description = "Tauri desktop application for Wayfinder"
authors = ["You <you@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/wayfinder"
edition = "2021"

# Ensure cargo run uses the GUI binary by default when multiple binaries exist
default-run = "wayfinder-tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
walkdir = "2"
chrono = "0.4"
regex = "1"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
rand = "0.8"

[target.'cfg(all(any(target_os = "macos", target_os = "linux", target_os = "windows"), target_arch = "x86_64"))'.dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
